Edited credits link in footer

--- a/src/index.html
+++ b/src/index.html
@@ -86,7 +86,7 @@
               <div class="footer__right--top">
                 <div>
                   <span>Namur, Belgique</span>
-                  <a href="/credits.html" target="_blank">Crédits</a>
+                  <a href="credits.html" target="_blank">Crédits</a>
                 </div>
                 <a href="#hero" class="footer__back-top">Remonter</a>
               </div>
