Updated hero span

--- a/src/index.html
+++ b/src/index.html
@@ -55,7 +55,7 @@
         <section class="hero" id="hero">
           <div class="hero__container">
             <h1 class="hero__h1">Gabriel Manciu</h1>
-            <span class="hero__span">étudiant en web design</span>
+            <span class="hero__span">développeur front-end</span>
           </div>
         </section>
         <section class="work" id="work">
