Fade in when loading home page

--- a/src/index.html
+++ b/src/index.html
@@ -56,6 +56,7 @@
           <div class="hero__container">
             <h1 class="hero__h1">Gabriel Manciu</h1>
             <span class="hero__span">développeur front-end</span>
+            <span class="hero__span--down">défilez vers le bas</span>
           </div>
         </section>
         <section class="work" id="work">
