Disabled scrollsmoother, adjusted nav pointer events

--- a/src/index.html
+++ b/src/index.html
@@ -49,8 +49,8 @@
       <button class="nav__mobile-close"></button>
     </div>
   </header>
-  <div id="smooth-wrapper">
-    <div id="smooth-content">
+  <!-- <div id="smooth-wrapper">
+    <div id="smooth-content"> -->
       <main class="main">
         <section class="hero" id="hero">
           <div class="hero__container">
@@ -109,8 +109,8 @@
           <a href="mailto:gabriel@manciu.be" class="footer__contact">Contact par mail</a>
         </div>
       </footer>
-    </div>
-  </div>
+    <!-- </div>
+  </div> -->
 
 </body>
 </html>
