Moved background gradient outside of hero section & disabled hard moving sections

--- a/src/index.html
+++ b/src/index.html
@@ -52,6 +52,9 @@
   <!-- <div id="smooth-wrapper">
     <div id="smooth-content"> -->
       <main class="main">
+        <div class="main__bg">
+          <div></div>
+        </div>
         <section class="hero" id="hero">
           <div class="hero__container">
             <h1 class="hero__h1">Gabriel Manciu</h1>
